--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,4 +16,11 @@ h1 {
 
 ul {
     list-style-type: none;
+    margin-top: 2rem;
+}
+
+img {
+    height: 100px;
+    object-fit: cover;
+    width: 100px;
 }
